pxc/tests/test_19_thread/thrtest3.px
namespace ttest;
import common "";
import thread "";

struct my_thread_obj(int x0, int y0, io::ioptr const& iop0) {
  int x = x0;
  int y = y0;
  io::ioptr iop = iop0;
  function void main() {
    io::file::fileptr stdout = io::standard::get_stdout(iop);
    io::standard::file_println(*stdout, "my thread main");
    io::standard::file_println(*stdout, x);
  }
}

threadptr thr = thread_create(my_thread_obj(123, 456, io::io));
  // error: my_thread_obj is not threaded
thr.join();

